--- a/main.bib
+++ b/main.bib
@@ -116,3 +116,15 @@ doi = "http://dx.doi.org/10.15760/etd.1369",
 url = "http://pdxscholar.library.pdx.edu/open_access_etds/1370/",
 
 }
+
+@misc{laplace,
+  author        = "W. Craig Carter",
+  title         = "3.21 Spring 2002: Lecture 08",
+  month         = {February},
+  year          = {2002},
+  publisher={Massachusetts Institute of Technology}
+  howpublished = {\url{http://pruffle.mit.edu/~ccarter/8b/Lecture_08/Lecture_08.html#eq:ltde}},
+  note = {Accessed: 2017-07-03}
+}
+
+
